--- a/index.html
+++ b/index.html
@@ -2286,13 +2286,13 @@
 <h2 id='Route101'>Route101</h2>
 <h3>Grass:</h3>
 <table>
-<tr><td>Wurmple</td><td>3 - 5</td></tr>
+<tr><td>Cottonee</td><td>3 - 5</td></tr>
 <tr><td>Poochyena</td><td>3 - 5</td></tr>
 <tr><td>Sentret</td><td>3 - 5</td></tr>
-<tr><td>Wurmple</td><td>3 - 5</td></tr>
+<tr><td>Toxel</td><td>3 - 5</td></tr>
 <tr><td>Hoothoot</td><td>3 - 5</td></tr>
 <tr><td>Rookidee</td><td>3 - 5</td></tr>
-<tr><td>Caterpie</td><td>3 - 5</td></tr>
+<tr><td>Pikipek</td><td>3 - 5</td></tr>
 <tr><td>Pawmi</td><td>3 - 5</td></tr>
 <tr><td>Mankey</td><td>3 - 5</td></tr>
 <tr><td>Riolu</td><td>3 - 5</td></tr>
@@ -2393,14 +2393,14 @@
 <table>
 <tr><td>Poochyena</td><td>5 - 7</td></tr>
 <tr><td>Poliwag</td><td>5 - 7</td></tr>
-<tr><td>Poochyena</td><td>5 - 7</td></tr>
+<tr><td>Wattrel</td><td>5 - 7</td></tr>
 <tr><td>Psyduck</td><td>5 - 7</td></tr>
 <tr><td>Wingull</td><td>5 - 7</td></tr>
 <tr><td>Lotad</td><td>5 - 7</td></tr>
 <tr><td>Bellsprout</td><td>5 - 7</td></tr>
 <tr><td>Zigzagoon</td><td>5 - 7</td></tr>
 <tr><td>Budew</td><td>5 - 7</td></tr>
-<tr><td>Wattrel</td><td>5 - 7</td></tr>
+<tr><td>Houndour</td><td>5 - 7</td></tr>
 <tr><td>Croagunk</td><td>5 - 7</td></tr>
 <tr><td>Abra</td><td>5 - 7</td></tr>
 </table>
@@ -2530,7 +2530,7 @@
 <h3>Grass:</h3>
 <table>
 <tr><td>Poochyena</td><td>10 - 12</td></tr>
-<tr><td>Wurmple</td><td>10 - 12</td></tr>
+<tr><td>Pikachu</td><td>10 - 12</td></tr>
 <tr><td>Sentret</td><td>10 - 12</td></tr>
 <tr><td>Marill</td><td>10 - 12</td></tr>
 <tr><td>Combee</td><td>10 - 12</td></tr>
@@ -4399,7 +4399,7 @@
 <tr><td>Purugly</td><td>45 - 48</td></tr>
 <tr><td>Linoone</td><td>45 - 48</td></tr>
 <tr><td>Obstagoon</td><td>45 - 48</td></tr>
-<tr><td>Oddish</td><td>45 - 48</td></tr>
+<tr><td>Vulpix_Alola</td><td>45 - 48</td></tr>
 <tr><td>Gogoat</td><td>45 - 48</td></tr>
 <tr><td>Skuntank</td><td>45 - 48</td></tr>
 <tr><td>Miltank</td><td>45 - 48</td></tr>
@@ -4493,6 +4493,21 @@
 <tr><td>Zebstrika</td><td>Level 60</td></tr>
 <tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/zebstrika/anim_front.png'></img></div>
+</td></tr>
+<table id='Yasu'>
+<tr><td>Ninja Boy</td><td><strong>Yasu</strong></td>
+<tr><td>AI:</td><td>Check Bad Move, Try To Faint<td></tr>
+<tr><td>Ninjask</td><td>Level 60</td></tr>
+<tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
+<tr><td><div class=poke-img><img src='graphics/pokemon/ninjask/anim_front.png'></img></div>
+</td></tr>
+<tr><td>Shedinja</td><td>Level 60</td></tr>
+<tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
+<tr><td><div class=poke-img><img src='graphics/pokemon/shedinja/anim_front.png'></img></div>
+</td></tr>
+<tr><td>Lokix</td><td>Level 60</td></tr>
+<tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
+<tr><td><div class=poke-img><img src='graphics/pokemon/lokix/anim_front.png'></img></div>
 </td></tr>
 <table id='Takashi'>
 <tr><td>Ninja Boy</td><td><strong>Takashi</strong></td>
@@ -4626,7 +4641,7 @@
 <tr><td>IVs:<td>31 HP / 31 Atk / 31 Def / 31 SpA / 31 SpD / 31 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/torterra/anim_front.png'></img></div>
 <td><ul>
-<li>Bulldoze</li>
+<li>High Horsepower</li>
 <li>Wood Hammer</li>
 <li>Swords Dance</li>
 <li>Crunch</li>
@@ -4695,7 +4710,7 @@
 <tr><td>IVs:<td>31 HP / 31 Atk / 31 Def / 31 SpA / 31 SpD / 31 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/torterra/anim_front.png'></img></div>
 <td><ul>
-<li>Bulldoze</li>
+<li>High Horsepower</li>
 <li>Wood Hammer</li>
 <li>Swords Dance</li>
 <li>Crunch</li>
@@ -4833,7 +4848,7 @@
 <tr><td>IVs:<td>31 HP / 31 Atk / 31 Def / 31 SpA / 31 SpD / 31 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/torterra/anim_front.png'></img></div>
 <td><ul>
-<li>Bulldoze</li>
+<li>High Horsepower</li>
 <li>Wood Hammer</li>
 <li>Swords Dance</li>
 <li>Crunch</li>
@@ -4902,7 +4917,7 @@
 <tr><td>IVs:<td>31 HP / 31 Atk / 31 Def / 31 SpA / 31 SpD / 31 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/torterra/anim_front.png'></img></div>
 <td><ul>
-<li>Bulldoze</li>
+<li>High Horsepower</li>
 <li>Wood Hammer</li>
 <li>Swords Dance</li>
 <li>Crunch</li>
@@ -4986,6 +5001,17 @@
 <tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
 <tr><td><div class=poke-img><img src='graphics/pokemon/galvantula/anim_front.png'></img></div>
 </td></tr>
+<table id='Hideo'>
+<tr><td>Ninja Boy</td><td><strong>Hideo</strong></td>
+<tr><td>AI:</td><td>Check Bad Move, Try To Faint<td></tr>
+<tr><td>Weezing</td><td>Level 60</td></tr>
+<tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
+<tr><td><div class=poke-img><img src='graphics/pokemon/weezing/anim_front.png'></img></div>
+</td></tr>
+<tr><td>Lokix</td><td>Level 60</td></tr>
+<tr><td>IVs:<td>24 HP / 24 Atk / 24 Def / 24 SpA / 24 SpD / 24 Spe</td></tr>
+<tr><td><div class=poke-img><img src='graphics/pokemon/lokix/anim_front.png'></img></div>
+</td></tr>
 <table id='Dayton'>
 <tr><td>Kindler</td><td><strong>Dayton</strong></td>
 <tr><td>AI:</td><td>Check Bad Move<td></tr>
@@ -5016,7 +5042,7 @@
 <tr><td>Dachsbun</td><td>49 - 52</td></tr>
 <tr><td>Mightyena</td><td>49 - 52</td></tr>
 <tr><td>Noivern</td><td>49 - 52</td></tr>
-<tr><td>Oddish</td><td>49 - 52</td></tr>
+<tr><td>Sandshrew_Alola</td><td>49 - 52</td></tr>
 <tr><td>Mabosstiff</td><td>49 - 52</td></tr>
 <tr><td>Morpeko</td><td>49 - 52</td></tr>
 <tr><td>Gloom</td><td>49 - 52</td></tr>
